# copilot-cat

./: .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
assets/: gen_pounce.py  gen_svgs.py  gen_walk.py
assets/experiments/: README.md  cat_3d_concept.py  cat_3d_viewer.qml  cat_model.mtl
docs/: QML_ARCHITECTURE.md
mcp/: server.ts  test-mcp.ts
pkg/: AppxManifest.xml  README.md  gen_icons.py  make_msix.cmd
pkg/chocolatey/: copilot-cat.nuspec
pkg/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
pkg/deb/copilot-cat/DEBIAN/: control
pkg/rpm/: copilot-cat.desktop  copilot-cat.spec
pkg/wix/: copilot-cat.wxs
qml/: CatSprite.qml  Debug.qml  Main.qml  ReplyBubble.qml  SetupWizard.qml  ThoughtBubble.qml
scripts/: copilot-cat-mcp  copilot-cat-mcp.cmd  test-openrouter.sh
src/: catconfig.cpp  catconfig.h  copilotbridge.cpp  copilotbridge.h  main.cpp
tests/: TEST_PLAN.md  test-chat-dedup.mjs  test-dedup.mjs  test-qml-structure.mjs  tst_animation.qml  tst_assets.qml  tst_catconfig.cpp  tst_chatdedup.qml  tst_copilotbridge.cpp  tst_main.cpp  tst_replybubble.qml
